--- a/popup/popup.css
+++ b/popup/popup.css
@@ -1,11 +1,5 @@
 body {
-    background-color: #222;
-    color: #eee;
-
-    width: 16rem;
-    height: 4rem;
-}
-
-.special-text {
-    color: red;
+  color: #eee;
+  width: 16rem;
+  height: 6em;
 }
